--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/Components/Footer/Default.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/Components/Footer/Default.cshtml
@@ -61,7 +61,7 @@
         <div class="modal-dialog modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title" id="footer_item_title" style="color:black"></h1>
+                    <header class="modal-title" id="footer_item_title" style="color:black"></header>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                 </div>
                 <div class="modal-body">
