--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Register.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,13 +9,13 @@
     <div class="col-lg-6 mx-auto p-3">
         
         <div id="register_header">
-            <h2 class="text-center mb-3 ">Register</h2>
+            <h2 class="text-center mb-3 ">Anmelden</h2>
         </div>
         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
            
             <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">First Name</label>
+                <label class="col-sm-4 col-form-label">Vorname</label>
                 <div class="col-sm-8">
                     <input  asp-for="Input.FirstName" class="form-control" />
                 <span asp-validation-for="Input.FirstName" class="text-danger"></span>
@@ -25,7 +25,7 @@
             <input type="hidden" name="returnUrl"  id="returnUrl"/>
 
             <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Last Name</label>
+                <label class="col-sm-4 col-form-label">Name</label>
                 <div class="col-sm-8">
                     <input  asp-for="Input.LastName" class="form-control" />
                     <span asp-validation-for="Input.LastName" class="text-danger"></span>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Email</label>
+                <label class="col-sm-4 col-form-label">E-Mail Adresse</label>
                 <div class="col-sm-8">
                 <input  asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
@@ -42,7 +42,7 @@
             </div>
 
             <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Phone</label>
+                <label class="col-sm-4 col-form-label">Hendy nummer</label>
                 <div class="col-sm-8">
                     <input  asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
@@ -50,7 +50,7 @@
             </div>
 
             <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Address</label>
+                <label class="col-sm-4 col-form-label">Adresse</label>
                 <div class="col-sm-8">
                  <input  asp-for="Input.Address" class="form-control" />
                 <span asp-validation-for="Input.Address" class="text-danger"></span>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Subscribe to news</label>
+                <label class="col-sm-4 col-form-label">Abonnieren Sie die Nachrichten</label>
                 <div class="col-sm-8">
                     @Html.CheckBoxFor(model => model.Input.isSend, new { @class = "form-check-input" })
                     <span asp-validation-for="Input.isSend" class="text-danger"></span>
@@ -83,7 +83,7 @@
                     <button type="submit" class="btn btn-outline-success">Register</button>
               </div> 
                 <div class="col-sm-4 d-grid">
-                    <a class="btn btn-outline-danger" href="/" role="button">Cancel</a>
+                    <a class="btn btn-outline-danger" href="/" role="button">Abbrechen</a>
                 </div>
             </div>
         </form>
