--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Blogs/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Blogs/Index.cshtml
@@ -15,6 +15,11 @@
         background:white;
         border-left: var(--primary-border);
     }
+
+    #productMenuInfo{
+        text-align:center;
+        align-items:center;
+    }
 </style>
 
 <div id="Blog">
