--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
@@ -207,7 +207,7 @@
                                     <label class="control-label">Options Image</label>
                                     <input name="ImageNameOption" type="text" value="@options.ImageName" id="opt" class="form-control" />
                                     <br />
-                                    <img src="@("/Image/"+@options.ImageName)" height="300" width="300" />
+                                    <img src="@("/compression/"+@options.ImageName)" height="300" width="300" />
                                     <br />
                                 </div>
                                 <div class="form-group">
