--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Halbzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Halbzylinder.cshtml
@@ -128,7 +128,16 @@
                         {
                             r++;
                             <div class="input-block" id="block-@r">
-                                <h2>Options</h2>
+                                
+                                <div>
+                                    <h2>Options</h2>
+                                </div>
+                                
+                                    <div>
+                                        <input type="button" class="btn btn-success" onclick="addOptionsValue(@r)" value="+" />
+                                        <input type="button" class="btn danger" onclick="minusOptionsValue(@r)" value="-" />
+                                    </div>
+                                
                                 <div class="form-group">
                                     <label class="control-label">Options Name</label>
                                     <input name="Options" value="@options.Name" id="opt" class="form-control" />
@@ -162,7 +171,7 @@
                                         @for (int i = 0; i < ViewBag.CountOptions[r]; i++)
                                         {
                                             f++;
-                                            <input type="text" placeholder="costNGF" name="costNGF" value="@ViewBag.OptionValue[f].Cost" class="form-control" />
+                                            <input type="number" step="0.01"  placeholder="costNGF" name="costNGF" value="@ViewBag.OptionValue[f].Cost" class="form-control" />
                                         }
                                     </div>
                                     <input type="hidden" id="counter" name="inputCounter" />
@@ -187,339 +196,17 @@
         </div>
     </div>
 
-    @section Scripts 
+    @section Scripts
     {
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="~/lib/tinymce_7.1.2/tinymce/js/tinymce/tinymce.min.js"></script>
-         @{
+        @{
             await Html.RenderPartialAsync("_ValidationScriptsPartial");
         }
         <script>
-
-            function goBack() {
-                if (document.referrer !== "") {
-                    window.location.href = document.referrer;  // Возвращаемся на предыдущую страницу
-                } else {
-                    window.history.back();  // Если реферера нет, используем history.back()
-                }
-            }
-
-            function showAlert(message) {
-                const alertBox = document.getElementById('alertBox');
-                const alertMessage = document.getElementById('alertMessage');
-
-                alertMessage.innerText = message;  // Установка сообщения
-                alertBox.classList.remove('d-none');  // Удалить класс d-none
-                alertBox.classList.add('show'); // Добавить класс show для отображения
-            }
-
-
-            function closeAlert() {
-                const alertBox = document.getElementById('alertBox');
-                alertBox.classList.remove('show');  // Удалить класс show
-                alertBox.classList.add('d-none');  // Добавить класс d-none для скрытия
-            }
-
-            document.getElementById('submitForm').addEventListener('click', function (event) {
-              
-                event.preventDefault();
-                tinymce.triggerSave();
-
-                var form = document.getElementById('systemInfoForm');
-
-                var formData = new FormData(form);
-
-                axios.post('/Home/SaveHalbzylinder', formData, {
-                    headers: {
-                        'Content-Type': 'multipart/form-data'
-                    }
-                })
-                    .then(function (response) {
-
-                        const alertBox = document.getElementById('alertBox');
-                        alertBox.classList.remove('alert-danger');
-                        alertBox.classList.add('alert-success');
-                        showAlert(response.data.message);
-
-                    })
-                    .catch(function (error) {
-
-                        const alertBox = document.getElementById('alertBox');
-                        alertBox.classList.remove('alert-success');
-                        alertBox.classList.add('alert-danger');
-                        showAlert(error);
-                    });
-            });
-
-
-            let Galery = document.getElementById("Galerry");
-
-            function AddImage(imageBlock) {
-                let addBlock = `<div>
-                                    <label for="Images">Bilder auswählen:</label>
-                                        <input type="file" name="UploadGalleryImages" multiple class="form-control" />
-                                </div>`;
-
-                document.getElementById('Galerry').innerHTML += addBlock;
-            }
-
-            function deleteImage(imageBlock) {
-                let imgBlock = document.getElementById("galeryItem-" + imageBlock);
-
-                if (Galery.childElementCount == 3) {
-                    imgBlock.remove();
-                    Galery.remove();
-                }
-                else {
-                    imgBlock.remove();
-                }
-            }
-
-            function deleteOption(id) 
-            {
-                let optionBlock = document.getElementById("block-" + id);
-
-                optionBlock.remove();
-            }
-
-            tinymce.init({
-                selector: '#exampleFormControlTextarea1',
-                plugins: [
-                    'advlist', 'autolink', 'link', 'image', 'lists', 'charmap', 'preview', 'anchor', 'pagebreak',
-                    'searchreplace', 'wordcount', 'visualblocks', 'visualchars', 'code', 'fullscreen', 'insertdatetime',
-                    'media', 'table', 'emoticons', 'help'
-                ],
-                toolbar: 'undo redo | styles | bold italic | alignleft aligncenter alignright alignjustify | ' +
-                    'bullist numlist outdent indent | link image | print preview media fullscreen | ' +
-                    'forecolor backcolor emoticons | help',
-                menu: {
-                    favs: { title: 'Discriptions', items: 'code visualaid | searchreplace | emoticons' }
-                },
-                menubar: 'favs file edit view insert format tools table help',
-                content_css: 'css/content.css'
-            });
-            tinymce.init({
-                selector: '#discriptions',
-                plugins: [
-                    'advlist', 'autolink', 'link', 'image', 'lists', 'charmap', 'preview', 'anchor', 'pagebreak',
-                    'searchreplace', 'wordcount', 'visualblocks', 'visualchars', 'code', 'fullscreen', 'insertdatetime',
-                    'media', 'table', 'emoticons', 'help'
-                ],
-                toolbar: 'undo redo | styles | bold italic | alignleft aligncenter alignright alignjustify | ' +
-                    'bullist numlist outdent indent | link image | print preview media fullscreen | ' +
-                    'forecolor backcolor emoticons | help',
-                menu: {
-                    favs: { title: 'Optionen', items: 'code visualaid | searchreplace | emoticons' }
-                },
-                menubar: 'favs file edit view insert format tools table help',
-                content_css: 'css/content.css'
-            });
-
-            let plusAussen_Innen = document.getElementById('addAussen_Innen');
-            let removeAussen_Innen = document.getElementById('addAussen_Innen_remove');
-
-            let docInnen = document.getElementById('InnenProfilDopel');
-            let docAussen = document.getElementById('AussenProfilDopel');
-            
-            let selectedInputs = [];
-
-            let allAussen = document.querySelectorAll("#aus");
-            let aussenCost = document.querySelectorAll("#ausCost");
-
-            allAussen.forEach((item) => {
-
-                item.addEventListener("keydown", (event) => {
-                    if (event.key === 'Control') {
-                        selectedInputs.push(item);
-                    }
-                });
-
-
-                item.addEventListener('change', (event) => {
-                    selectedInputs.forEach((x) => {
-                        x.value = event.target.value;
-                    });
-                    selectedInputs = [];
-                });
-
-            });
-
-
-            aussenCost.forEach((item) => {
-
-                item.addEventListener("keydown", (event) => {
-                    item.addEventListener("click", () => {
-                        selectedInputs.push(item);
-                    })
-                });
-
-
-                item.addEventListener('change', (event) => {
-
-                    selectedInputs.forEach((x) => {
-                        x.value = event.target.value;
-                    });
-                    selectedInputs = [];
-                });
-
-            });
-
-            window.addEventListener('load', function () {
-                const blocks = document.querySelectorAll('.input-block');
-                for (let i = 0; i < blocks.length; i++) {
-                    let counterBlock = blocks[i].querySelectorAll("#valueNGF  input");
-
-                    let counter = blocks[i].querySelectorAll("#counter");
-
-                    counter[0].value = counterBlock.length;
-
-                    console.log(counter[0].value);
-                }
-            });
-
-            let costNGF = document.getElementById('costNGF');
-            let valueNGF = document.getElementById('valueNGF');
-
-            let productOptions = document.getElementById('productOptions');
-            let addOptions = document.getElementById('addOptions');
-
-            plusAussen_Innen.addEventListener('click', () => {
-
-                let d = document.createElement('input');
-                d.setAttribute('name', 'Size');
-                d.setAttribute('placeholder', 'Size');
-                d.setAttribute('class', 'form-control');
-                d.id = 'aus';
-
-                let costAussen = document.createElement('input');
-                costAussen.setAttribute('name', 'costSizeAussen');
-                costAussen.setAttribute('placeholder', 'costAussen');
-                costAussen.setAttribute('class', 'form-control');
-                costAussen.setAttribute('step', '0.01');
-                costAussen.setAttribute('type', 'number');
-                costAussen.id = 'ausCost';
-
-                docAussen.append(d, costAussen);
-            });
-            removeAussen_Innen.addEventListener('click', () => {
-
-                let d = document.querySelectorAll('#aus');
-                let costAus = document.querySelectorAll("#ausCost");
-
-                docAussen.removeChild(d[d.length - 1]);
-                docAussen.removeChild(costAus[costAus.length - 1]);
-            });
-
-            document.addEventListener("DOMContentLoaded", function () {
-                const container = document.getElementById('productOptions');
-                const createBlockBtn = document.getElementById('createBlockBtn');
-                const addInputBtn = document.getElementById('addInputBtn');
-                const RemoveInputBtn = document.getElementById('RemoveInputBtn');
-
-                let blockCounter = document.querySelectorAll('.input-block').length > 0 ? document.querySelectorAll('.input-block').length : 1;
-
-                createBlockBtn.addEventListener('click', function () {
-                    const block = createBlock();
-                    container.appendChild(block);
-                });
-
-                addInputBtn.addEventListener('click', function () {
-                    const blocks = document.querySelectorAll('.input-block');
-                    const lastBlock = blocks[blocks.length - 1];
-
-                    if (lastBlock) {
-                        addInputs(lastBlock);
-                    } else {
-                        alert('Сначала создайте блок');
-                    }
-                });
-
-                RemoveInputBtn.addEventListener('click', function () {
-                    const blocks = document.querySelectorAll('.input-block');
-                    const lastBlock = blocks[blocks.length - 1];
-
-                    let inputProductValue = lastBlock.querySelectorAll("#valueNGF  input");
-                    let inputProductPrice = lastBlock.querySelectorAll("#costNGF  input");
-
-                    if (lastBlock) {
-                        if (inputProductValue.length < 2) {
-                            productOptions.removeChild(lastBlock);
-                        }
-                        else {
-                            inputProductValue[inputProductValue.length - 1].parentNode.removeChild(inputProductValue[inputProductValue.length - 1]);
-                            inputProductPrice[inputProductPrice.length - 1].parentNode.removeChild(inputProductPrice[inputProductPrice.length - 1]);
-                        }
-                    }
-                    else {
-                        alert('Сначала создайте блок');
-                    }
-                });
-
-                function createBlock() 
-                {
-                    const block = document.createElement('div');
-                    block.classList.add(`input-block`);
-                    block.innerHTML = `<div>
-                                                                                        <h1>Options</h1>
-                                                                                        <label>Name</label>
-                                                                                        <input class="form-control" type="text" name="Options" />
-                                                                                        <div>
-                                                                                            <p></p>
-                                                                                            <input name="postedFile" type="file" class="btn btn-success" />
-                                                                                            <p></p>
-                                                                                        </div>
-                                                                                        <label>Descriptions</label>
-                                                                                        <input class="form-control" type="text" name="Descriptions" />
-                                                                                        <h1>Value & Cost </h1>
-                                                                                        <div id="Aussen_Innen_ProfilDopel">
-                                                                                            <div id="valueNGF">
-                                                                                                <input type="text" placeholder="valueNGF" class="form-control" name="valueNGF" />
-                                                                                            </div>
-                                                                                            <div id="costNGF">
-                                                                                                <input type="number" placeholder="costNGF" class="form-control" step="0.01" name="costNGF" />
-                                                                                            </div>
-                                                                                                 <input type="hidden" id="counter" name="inputCounter" />
-                                                                                        </div>
-                                                                                    </div>
-                                                                                                <hr/>
-                                                                                      <br />
-                                                                                         <button class="btn btn-danger" onclick="deleteOption(${blockCounter})" 	type="button">Löschen</button>
-                                                                                      <hr />
-                                                                                      <br />
-                                                                                    `;
-
-                    blockCounter++;
-
-                    return block;
-                }
-
-                function addInputs(block) 
-                {
-
-                    let d = document.createElement('input');
-                    d.setAttribute('name', 'costNGF');
-                    d.setAttribute('placeholder', 'costNGF');
-                    d.setAttribute('class', 'form-control');
-
-                    let x = document.createElement('input');
-                    x.setAttribute('name', 'valueNGF');
-                    x.setAttribute('placeholder', 'valueNGF');
-                    x.setAttribute('class', 'form-control');
-
-                    const div1 = block.querySelector('#valueNGF');
-                    const div2 = block.querySelector('#costNGF');
-
-                    div1.appendChild(x);
-
-                    div2.appendChild(d);
-
-                    var counter = document.querySelectorAll('#counter');
-                    counter[counter.length - 1].value = block.querySelectorAll("#valueNGF  input").length;
-                };
-
-            })
-
+            let TypeZylinder = @Html.Raw(Model.schliessanlagenId);
         </script>
+        <script src="~/Js/Edit_Item/Edit_Product.js"></script>
     }
 }
 
